Fix up bugs & Combine native + wrapped SOL

--- a/src/assets/css/theme_v2.css
+++ b/src/assets/css/theme_v2.css
@@ -590,3 +590,8 @@ table tr {
 .token-card {
     filter: brightness(0.4);
 }
+
+.red {
+    color: red !important;
+    fill: red !important;
+}
